# lok-r4

./: Cargo.toml  Makefile  atest  build.rs  run  todo
src/: codegen.rs  error.rs  lexer.l  lexer.rs  main.rs  parser.lalrpop  parser.rs
src/codegen/: ast.rs  lir.rs
test/: ctrl.lok  expr.lok  fn.lok  hello.lok
