[package]
name = "lok_r4"
version = "0.1.0"
authors = ["TheOnlyMrCat <signupforforums5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { version = "0.1.0-llvm10sample", features = ["llvm10-0"] }